fix ordering problems in index.html * re-order z-indexes

--- a/_sass/entities/_banner.scss
+++ b/_sass/entities/_banner.scss
@@ -89,7 +89,6 @@ $popoverTipSize: 8px;
 	border-top: 6px solid #e0e3e8;
 	padding: 4em 4em;
 	color: #5d6778;
-	z-index: -1;
 	
 	p {
 		opacity: .8;
