--- a/_sass/entities/_popover.scss
+++ b/_sass/entities/_popover.scss
@@ -8,7 +8,6 @@
 	border-radius: 3px;
 	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
 	font-size: 1.4rem;
-	z-index: -1;
 	@extend .-no-rhythm;
 	
 	> h6 {
