--- a/_sass/entities/_snackbar.scss
+++ b/_sass/entities/_snackbar.scss
@@ -2,6 +2,7 @@
 	@extend .-no-rhythm;
 	position: fixed;
 	bottom: 0;
+	z-index: 10;
 	width: 100%;
 	
 	&--visible {
